--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-drive-clone",
+  "name": "file-drive",
   "version": "1.0.0",
   "app": "app.js",
   "scripts": {
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-validator": "^7.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
